Update chicken recipe

--- a/recipes/greek-style-garlic-chicken-breast.html
+++ b/recipes/greek-style-garlic-chicken-breast.html
@@ -1,1 +1,31 @@
-<h1>Greek Style Garlic Chicken Breast</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Greek Style Garlic Chicken Breast Recipe</title>
+</head>
+
+<body>
+  <!-- https://www.allrecipes.com/recipe/54202/greek-style-garlic-chicken-breast/ -->
+
+  <h1>Greek Style Garlic Chicken Breast</h1>
+  <img src="greek-style-garlic-chicken-breast.webp" alt="A plate of greek style chicken breast." width="30%" height="30%"/>
+
+  <h2>Description</h2>
+  <p>A delicious (and simple!) recipe for chicken breast using a greek marinade.</p>
+
+  <h2>Ingredients</h2>
+  <ul>    
+    <li>4 skinless, boneless chicken breast halves</li>
+    <li>1 cup extra virgin olive oil</li>
+    <li>1 lemon, juiced</li>
+    <li>2 teaspoons crushed garlic</li>
+    <li>1 teaspoon salt</li>
+    <li>½ teaspoons black pepper</li>
+    <li>⅓ teaspoon paprika</li>
+  </ul>
+
+</body>
+
+</html>
