--- a/recipes/greek-style-garlic-chicken-breast.html
+++ b/recipes/greek-style-garlic-chicken-breast.html
@@ -13,7 +13,7 @@
   <img src="greek-style-garlic-chicken-breast.webp" alt="A plate of greek style chicken breast." width="30%" height="30%"/>
 
   <h2>Description</h2>
-  <p>A delicious (and simple!) recipe for chicken breast using a greek marinade.</p>
+  <p>A simple recipe for chicken breast using a greek marinade. 4 servings.</p>
 
   <h2>Ingredients</h2>
   <ul>    
@@ -25,6 +25,13 @@
     <li>½ teaspoons black pepper</li>
     <li>⅓ teaspoon paprika</li>
   </ul>
+
+  <h2>Steps</h2>
+  <ol>
+    <li>Cut 3 slits in each chicken breast to allow marinade to penetrate. In a small bowl, whisk together olive oil, lemon juice, garlic, salt, pepper, and paprika for about 30 seconds. Place chicken in a large bowl, and pour marinade over. Using your hands, work marinade into chicken. Cover, and refrigerate overnight.</li>
+    <li>Preheat grill for medium heat, and lightly oil grate.</li>
+    <li>Cook chicken on grill until meat is no longer pink and juices run clear.</li>
+  </ol>
 
 </body>
 
