Add 2 recipes and update the index adequately

--- a/recipes/greek-style-garlic-chicken-breast.html
+++ b/recipes/greek-style-garlic-chicken-breast.html
@@ -10,7 +10,7 @@
   <!-- https://www.allrecipes.com/recipe/54202/greek-style-garlic-chicken-breast/ -->
 
   <h1>Greek Style Garlic Chicken Breast</h1>
-  <img src="greek-style-garlic-chicken-breast.webp" alt="A plate of greek style chicken breast." width="30%" height="30%"/>
+  <img src="../images/greek-style-garlic-chicken-breast.webp" alt="A plate of greek style chicken breast." width="30%" />
 
   <h2>Description</h2>
   <p>A simple recipe for chicken breast using a greek marinade. 4 servings.</p>
