--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/greek-style-garlic-chicken-breast.html">Greek Style Garlic Chicken Breast</a>
+  <ol>
+    <li><a href="./recipes/greek-style-garlic-chicken-breast.html">Greek Style Garlic Chicken Breast</a></li>
+    <li><a href="./recipes/french-crepes.html">French crêpes</a></li>
+    <li><a href="./recipes/salade-nicoise.html">Salade niçoise</a></li>
+  </ol>
+  
 
 </body>
