--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <img src="./images/nom.jpg" alt="A cute mouse eating a grain of corn." />
   <h1>Odin Recipes</h1>
   <ol>
     <li><a href="./recipes/greek-style-garlic-chicken-breast.html">Greek Style Garlic Chicken Breast</a></li>
