--- a/recipes/salade-nicoise.html
+++ b/recipes/salade-nicoise.html
@@ -13,10 +13,11 @@
   <img src="../images/salade-nicoise.webp" alt="A salade niçoise." width="30%" />
 
   <h2>Description</h2>
-  <p>This French-inspired salad makes a delightful summer dish. You can dress it up with other garden vegetables like corn, blanched broccoli, cauliflower and asparagus! 4 servings.</p>
+  <p>This French-inspired salad makes a delightful summer dish. You can dress it up with other garden vegetables like
+    corn, blanched broccoli, cauliflower and asparagus! 4 servings.</p>
 
   <h2>Ingredients</h2>
-  <ul>    
+  <ul>
     <li>½ pound new potatoes, quartered</li>
     <li>¼ cup chopped fresh parsley</li>
     <li>¼ cup pitted nicoise olives</li>
@@ -33,13 +34,14 @@
 
   <h2>Steps</h2>
   <ol>
-    <li>Bring a large pot of salted water to a boil. Add potatoes, and cook until tender but still firm, about 15 minutes. Drain and cool.</li>
-    <li>In a large bowl, combine the potatoes, parsley, olives, onion, tuna and green beans. Refrigerate for 2 to 4 hours.</li>
-    <li>In large bowl, toss greens with vinaigrette and top with chilled potato mixture. Garnish with eggs, tomatoes, capers and anchovies.</li>
+    <li>Bring a large pot of salted water to a boil. Add potatoes, and cook until tender but still firm, about 15
+      minutes. Drain and cool.</li>
+    <li>In a large bowl, combine the potatoes, parsley, olives, onion, tuna and green beans. Refrigerate for 2 to 4
+      hours.</li>
+    <li>In large bowl, toss greens with vinaigrette and top with chilled potato mixture. Garnish with eggs, tomatoes,
+      capers and anchovies.</li>
   </ol>
 
 </body>
 
 </html>
-
-
