Add css to all pages (index and 3 recipes)

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Index</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <img src="./images/nom.jpg" alt="A cute mouse eating a grain of corn." />
-  <h1>Odin Recipes</h1>
-  <ol>
-    <li><a href="./recipes/greek-style-garlic-chicken-breast.html">Greek Style Garlic Chicken Breast</a></li>
-    <li><a href="./recipes/french-crepes.html">French crêpes</a></li>
-    <li><a href="./recipes/salade-nicoise.html">Salade niçoise</a></li>
-  </ol>
+  <div class="main">
+    <img src="./images/nom.jpg" alt="A cute mouse eating a grain of corn." class="welcome-image" />
+    <h1><span class="title">Odin Recipes</span></h1>
+    <ol>
+      <li><a href="./recipes/greek-style-garlic-chicken-breast.html">Greek Style Garlic Chicken Breast</a></li>
+      <li><a href="./recipes/french-crepes.html">French crêpes</a></li>
+      <li><a href="./recipes/salade-nicoise.html">Salade niçoise</a></li>
+    </ol>
+  </div>
 </body>
