--- a/recipes/greek-style-garlic-chicken-breast.html
+++ b/recipes/greek-style-garlic-chicken-breast.html
@@ -4,35 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Greek Style Garlic Chicken Breast Recipe</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
   <!-- https://www.allrecipes.com/recipe/54202/greek-style-garlic-chicken-breast/ -->
+  <div class="main">
+    <h1><span class="title">Greek Style Garlic Chicken Breast</span></h1>
+    <img src="../images/greek-style-garlic-chicken-breast.webp" alt="A plate of greek style chicken breast."
+      width="30%" />
 
-  <h1>Greek Style Garlic Chicken Breast</h1>
-  <img src="../images/greek-style-garlic-chicken-breast.webp" alt="A plate of greek style chicken breast." width="30%" />
+    <h2>Description</h2>
+    <p>A simple recipe for chicken breast using a greek marinade. 4 servings.</p>
 
-  <h2>Description</h2>
-  <p>A simple recipe for chicken breast using a greek marinade. 4 servings.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>4 skinless, boneless chicken breast halves</li>
+      <li>1 cup extra virgin olive oil</li>
+      <li>1 lemon, juiced</li>
+      <li>2 teaspoons crushed garlic</li>
+      <li>1 teaspoon salt</li>
+      <li>½ teaspoons black pepper</li>
+      <li>⅓ teaspoon paprika</li>
+    </ul>
 
-  <h2>Ingredients</h2>
-  <ul>    
-    <li>4 skinless, boneless chicken breast halves</li>
-    <li>1 cup extra virgin olive oil</li>
-    <li>1 lemon, juiced</li>
-    <li>2 teaspoons crushed garlic</li>
-    <li>1 teaspoon salt</li>
-    <li>½ teaspoons black pepper</li>
-    <li>⅓ teaspoon paprika</li>
-  </ul>
-
-  <h2>Steps</h2>
-  <ol>
-    <li>Cut 3 slits in each chicken breast to allow marinade to penetrate. In a small bowl, whisk together olive oil, lemon juice, garlic, salt, pepper, and paprika for about 30 seconds. Place chicken in a large bowl, and pour marinade over. Using your hands, work marinade into chicken. Cover, and refrigerate overnight.</li>
-    <li>Preheat grill for medium heat, and lightly oil grate.</li>
-    <li>Cook chicken on grill until meat is no longer pink and juices run clear.</li>
-  </ol>
-
+    <h2>Steps</h2>
+    <ol>
+      <li>Cut 3 slits in each chicken breast to allow marinade to penetrate. In a small bowl, whisk together olive oil,
+        lemon juice, garlic, salt, pepper, and paprika for about 30 seconds. Place chicken in a large bowl, and pour
+        marinade over. Using your hands, work marinade into chicken. Cover, and refrigerate overnight.</li>
+      <li>Preheat grill for medium heat, and lightly oil grate.</li>
+      <li>Cook chicken on grill until meat is no longer pink and juices run clear.</li>
+    </ol>
+  </div>
 </body>
 
 </html>
